add celo example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 DATABASE_URL="postgresql://postgres@localhost:5432/some-db"
 
 PONDER_RPC_URL_8453="some-rpc-url"
+PONDER_RPC_URL_42220="some-rpc-url"
