--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ponder/core": "^0.6.23",
+    "axios": "^1.7.7",
     "hono": "^4.5.0",
     "viem": "^2.21.3"
   },
