--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ DATABASE_URL="postgresql://postgres@localhost:5432/some-db"
 
 PONDER_RPC_URL_8453="some-rpc-url"
 PONDER_RPC_URL_42220="some-rpc-url"
+PONDER_RPC_URL_8453="some-rpc-url"
+PONDER_RPC_URL_1="some-rpc-url"
+PONDER_RPC_URL_137="some-rpc-url"
+PONDER_RPC_URL_42161="some-rpc-url"
+PONDER_RPC_URL_10="some-rpc-url"
+PONDER_RPC_URL_100="some-rpc-url"
+PONDER_RPC_URL_42220="some-rpc-url"
+
