--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "ponder dev",
+    "dev": "ponder dev -v",
     "start": "ponder start",
     "codegen": "ponder codegen",
     "serve": "ponder serve",
@@ -13,7 +13,9 @@
   "dependencies": {
     "@ponder/core": "^0.7.1",
     "axios": "^1.7.7",
+    "fs": "^0.0.1-security",
     "hono": "^4.5.0",
+    "path": "^0.12.7",
     "viem": "^2.21.3"
   },
   "devDependencies": {
