--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "axios": "^1.7.7",
     "fs": "^0.0.1-security",
     "hono": "^4.5.0",
+    "lodash": "^4.17.21",
+    "openai": "^4.72.0",
     "path": "^0.12.7",
+    "pg": "^8.13.1",
     "viem": "^2.21.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20.10.0",
+    "@types/pg": "^8.11.10",
     "eslint": "^8.54.0",
     "eslint-config-ponder": "^0.6.23",
     "typescript": "^5.3.2"
