--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^4.72.0",
     "path": "^0.12.7",
     "pg": "^8.13.1",
+    "pgvector": "^0.2.0",
     "viem": "^2.21.3"
   },
   "devDependencies": {
