--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hono": "^4.5.0",
     "lodash": "^4.17.21",
     "openai": "^4.72.0",
+    "p-queue": "^8.0.1",
     "path": "^0.12.7",
     "pg": "^8.13.1",
     "pgvector": "^0.2.0",
