--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@ponder/core": "^0.7.7",
+    "@ponder/core": "^0.7.5",
     "axios": "^1.7.7",
     "fs": "^0.0.1-security",
     "hono": "^4.5.0",
+    "i": "^0.3.7",
     "lodash": "^4.17.21",
+    "npm": "^10.9.0",
     "openai": "^4.72.0",
     "p-queue": "^8.0.1",
     "path": "^0.12.7",
