--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@ponder/core": "^0.7.14",
     "axios": "^1.7.7",
     "fs": "^0.0.1-security",
     "hono": "^4.5.0",
@@ -21,6 +20,7 @@
     "path": "^0.12.7",
     "pg": "^8.13.1",
     "pgvector": "^0.2.0",
+    "ponder": "^0.8.0-next.2",
     "viem": "^2.21.3"
   },
   "devDependencies": {
