--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "NODE_OPTIONS='--max-old-space-size=16384' ponder dev -v",
-    "start": "NODE_OPTIONS='--max-old-space-size=16384' ponder start",
+    "start": "NODE_OPTIONS='--max-old-space-size=16384' ponder start --schema $RAILWAY_DEPLOYMENT_ID",
     "codegen": "ponder codegen",
     "serve": "ponder serve",
     "lint": "eslint .",
