--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.13.1",
     "pgvector": "^0.2.0",
     "ponder": "^0.8.2",
+    "redis": "^4.7.0",
     "viem": "^2.21.3"
   },
   "devDependencies": {
