--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "meme-indexing-base",
   "private": true,
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "NODE_OPTIONS='--max-old-space-size=16384' ponder dev -v",
     "start": "NODE_OPTIONS='--max-old-space-size=16384' ponder start --schema $RAILWAY_DEPLOYMENT_ID",
