--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_OPTIONS='--max-old-space-size=32768' ponder dev -v",
-    "start": "NODE_OPTIONS='--max-old-space-size=32768' ponder start --schema $RAILWAY_DEPLOYMENT_ID",
-    "codegen": "NODE_OPTIONS='--max-old-space-size=32768' ponder codegen",
-    "serve": "NODE_OPTIONS='--max-old-space-size=32768' ponder serve",
+    "dev": "NODE_OPTIONS='--max-old-space-size=32768 --expose-gc' ponder dev -v",
+    "start": "NODE_OPTIONS='--max-old-space-size=32768 --expose-gc' ponder start --schema $RAILWAY_DEPLOYMENT_ID",
+    "codegen": "NODE_OPTIONS='--max-old-space-size=32768 --expose-gc' ponder codegen",
+    "serve": "NODE_OPTIONS='--max-old-space-size=32768 --expose-gc' ponder serve",
     "lint": "eslint .",
     "typecheck": "tsc"
   },
