--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ REDIS_URL="redis://localhost:6379"
 # Required only if ABI_DATABASE_URL is set (for embeddings generation)
 OPENAI_API_KEY="your-openai-api-key"
 
+IS_LOCAL=true
+
 
 
 
