--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "setup-db": "ts-node scripts/setupDatabase.ts",
+    "setup-db": "NODE_OPTIONS='--loader ts-node/esm' ts-node -r dotenv/config scripts/setupDatabase.ts",
     "dev": "NODE_OPTIONS='--max-old-space-size=32768' ponder dev -v",
     "start": "NODE_OPTIONS='--max-old-space-size=32768' ponder start --schema $RAILWAY_DEPLOYMENT_ID",
     "codegen": "NODE_OPTIONS='--max-old-space-size=32768' ponder codegen",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.4",
     "fs": "^0.0.1-security",
     "hono": "^4.5.0",
@@ -26,6 +27,7 @@
     "pgvector": "^0.2.0",
     "ponder": "^0.8.7",
     "redis": "^4.7.0",
+    "ts-node": "^10.9.2",
     "viem": "^2.21.3"
   },
   "devDependencies": {
