ponder: disable not used chains

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,7 @@
 # Required: RPC URLs for supported networks
-PONDER_RPC_URL_1="https://eth-mainnet.g.alchemy.com/v2/your-api-key"      # Ethereum Mainnet
-PONDER_RPC_URL_10="https://opt-mainnet.g.alchemy.com/v2/your-api-key"     # Optimism
-PONDER_RPC_URL_100="https://rpc.gnosischain.com"                          # Gnosis Chain
-PONDER_RPC_URL_137="https://polygon-mainnet.g.alchemy.com/v2/your-api-key" # Polygon
-PONDER_RPC_URL_8453="https://base-mainnet.g.alchemy.com/v2/your-api-key"  # Base
-PONDER_RPC_URL_42161="https://arb-mainnet.g.alchemy.com/v2/your-api-key"  # Arbitrum
+PONDER_RPC_URL_1= # Ethereum
+PONDER_RPC_URL_100= # Gnosis Chain
+PONDER_RPC_URL_8453= # Base
 
 # Optional: Main database URL (defaults to SQLite if not provided)
 DATABASE_URL="postgresql://postgres@localhost:5432/agentscan"
