--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "setup-db": "NODE_OPTIONS='--loader ts-node/esm' ts-node -r dotenv/config scripts/setupDatabase.ts",
-    "dev": "NODE_OPTIONS='--max-old-space-size=32768' ponder dev -v",
-    "start": "NODE_OPTIONS='--max-old-space-size=32768' ponder start --schema $RAILWAY_DEPLOYMENT_ID",
+    "dev": "NODE_OPTIONS='--max-old-space-size=32768' ponder dev -v --schema oscar_perez",
+    "start": "NODE_OPTIONS='--max-old-space-size=32768' ponder start -v --schema oscar",
     "codegen": "NODE_OPTIONS='--max-old-space-size=32768' ponder codegen",
     "serve": "NODE_OPTIONS='--max-old-space-size=32768' ponder serve",
     "lint": "eslint .",
