project: last changes for selft hosted deployment

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ OPENAI_API_KEY="your-openai-api-key"
 
 IS_LOCAL=true
 
+# Optional: Disable Ponder telemetry
+PONDER_TELEMETRY_DISABLED=true
 
-
-
+# Schema ID for production
+SCHEMA_ID=
