--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "setup-db": "NODE_OPTIONS='--loader ts-node/esm' ts-node -r dotenv/config scripts/setupDatabase.ts",
     "dev": "NODE_OPTIONS='--max-old-space-size=32768' ponder dev -v",
-    "start": "NODE_OPTIONS='--max-old-space-size=32768' ponder start --schema $RAILWAY_DEPLOYMENT_ID",
+    "start": "NODE_OPTIONS='--max-old-space-size=32768' ponder start -v --schema $SCHEMA_ID",
     "codegen": "NODE_OPTIONS='--max-old-space-size=32768' ponder codegen",
     "serve": "NODE_OPTIONS='--max-old-space-size=32768' ponder serve",
     "lint": "eslint .",
