--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{vars.DOCKER_USER}}
+          username: ${{secrets.DOCKER_USER}}
           password: ${{secrets.DOCKER_PASSWORD}}
       - name: Build version tagged images
         run: |
           IMAGE_NAME=$(basename $GITHUB_REPOSITORY)
-          docker build -t ${{vars.DOCKER_USER}}/$IMAGE_NAME:${{ github.event.release.tag_name }} . --push
+          docker build -t ${{secrets.DOCKER_USER}}/$IMAGE_NAME:${{ github.event.release.tag_name }} . --push
